compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__wrap_uncalled_function_in_anonymous_function.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  op\n}\n\nfn op(i) {\n  todo\n}\n"
---
----- BEFORE ACTION
pub fn main() {
  op
  ↑ 
}

fn op(i) {
  todo
}


----- AFTER ACTION
pub fn main() {
  fn(value) { op(value) }
}

fn op(i) {
  todo
}
